--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGtiLWSXcSGoNfIS1x7PwrX4aDD9yT9mo&callback=initMap" async defer></script>
+
+
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
 
@@ -23,4 +26,10 @@
   <app-root></app-root>
 </body>
 
+<script>
+  function initMap() {
+    // Código para inicializar el mapa
+    console.log("Google Maps script loaded successfully");
+  }
+</script>
 </html>
